style.css
/* ... */
.tag-pill {
  margin-bottom: 24px;
  padding: 6px 12px;
  border: 1px solid var(--color-blue);
  width: max-content;
  color: var(--color-blue);
  border-radius: 9999px;
  font-size: 14px;
  line-height: 20px;
  font-weight: 500;
}

.info-content h3 {
  font-size: clamp(28px, 2.4vw, 48px);
  font-weight: 600;
  color: var(--color-text-primary);
  line-height: 1.2;
  margin: clamp(16px, 2vw, 24px) 0;
}

.section-description {
  max-width: 703px;
  font-size: clamp(14px, 1.1vw, 18px);
  font-weight: 400;
  color: var(--color-text-tertiary);
  line-height: 1.6;
}

.info-image {
  width: 100%;
  max-width: clamp(360px, 43vw, 792px);
  padding: clamp(12px, 2vw, 25px) 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.info-image img {
  width: 100%;
  max-width: clamp(320px, 42vw, 100%);
  height: auto;
  border-radius: clamp(8px, 1vw, 12px);
}

@media (max-width: 1536px) {
  /* .section-heading {
    font-size: 42px;
  } */
  .section-description {
    max-width: 566px;
  }
  .info-image {
    justify-content: end;
  }
  .feature-info-section {
    padding: 20px 0;
  }
}

@media (max-width: 1024px) {
  .section-heading {
    font-size: 38px;
  }
}

@media (max-width: 768px) {
  .feature-info-section .container {
    flex-direction: column;
    text-align: center;
    gap: 40px;
  }

  .info-content {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .tag-pill {
    margin-bottom: 16px;
  }

  /* .section-heading {
    font-size: 32px;
  }

  .section-description {
    font-size: 16px;
  } */
}

/* ========== OUTREACH SECTION ========== */

.outreach-section {
  background: linear-gradient(to bottom, #1a234c, #6b65e8);
  color: #fff;
  padding-bottom: 0px;
}

.outreach-section .info-content {
  flex: 1;
  width: 100%;
  max-width: 100%;
}

.outreach-section .container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 60px;
}

@media (max-width: 1536px) {
  .outreach-section .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 30px;
  }
}

@media (max-width: 1536px) and (min-width: 1024px) {
  .outreach-section .info-image {
    justify-content: start;
  }
  .outreach-section .info-image img {
    width: 90%;
  }

  .outreach-section .section-description {
  }
}

@media (max-width: 768px) {
  .outreach-section .info-image {
    padding-right: 0;
  }
  .info-image {
    padding-right: 0;
    justify-content: center;
    width: 100%;
    max-width: 100%;
  }
  .info-image img {
    width: 100%;
    max-width: 100%;
  }
}

.outreach-section h3 {
  margin-top: 8px;
  color: #fff;
}

.outreach-section .page-name-text {
  border: 1px solid #fff;
  color: #fff;
}

.outreach-section .section-description {
  color: #fff;
}

@media (max-width: 768px) {
  .outreach-section .container {
    flex-direction: column-reverse;
  }
}

/* ========== CARDS SECTION ========== */

.cards-section {
  position: relative;
  overflow: hidden;
  background-color: #fff;
  z-index: 1;
}

.bg-blur-circles {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  pointer-events: none;
  z-index: -1;
}

.blur-circle {
  position: absolute;
  width: 400px;
  height: 400px;
  border-radius: 50%;
  filter: blur(200px); /* Adjusting for visible effect on web layout */
  opacity: 0.6;
}

.circle-1 {
  background: #4e6bea;
  top: 30%;
  left: -20%;
}
.circle-2 {
  background: #4eeae7;
  top: 30%;
  right: 40%;
}
.circle-3 {
  background: #4e6bea;
  top: 30%;
  right: -10%;
}

.grid-cards {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 24px;
}

.card {
  background: #fff;
  border: 1px solid #f2f4f7;
  border-radius: 16px;
  /* padding: 32px; */
  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.05);
  display: flex;
  gap: 32px;
  flex-direction: column;
}

.card-large {
  justify-content: flex-start;
  gap: 0px;
}

.card-stack {
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.card-horizontal {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  gap: 32px;
}

.card-icon {
  width: 48px;
  height: 48px;
  /* margin-bottom: 24px; */
  background: var(--color-blue);
  border-radius: 12px;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 10px;
}

.card-icon img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.card-heading {
  font-size: clamp(16px, 1.5vw, 30px);
  font-weight: 700;
  color: #101828;
}

.card-desc {
  font-weight: 400;
  font-size: clamp(14px, 1.1vw, 20px);
  line-height: clamp(22px, 1.6vw, 30px);
  color: #181d27;
}

.card-main-img {
  width: 100%;
  padding: 0 clamp(12px, 2.5vw, 32px) clamp(12px, 2.5vw, 32px)
    clamp(12px, 2.5vw, 32px);
  margin-top: auto;
}

.card-main-img img {
  width: 100%;
  height: auto;
  border-radius: clamp(6px, 1vw, 12px);
}

.card-info {
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: start;
  gap: clamp(6px, 0.5vw, 8px);
  padding: clamp(16px, 2.5vw, 32px);
  height: 100%;
}

.card-side-img {
  flex: 1;
  display: flex;
  padding: 12px;
  justify-content: flex-end;
}

.card-side-img img {
  max-width: 100%;
  height: auto;
  border-radius: 12px;
}

@media (max-width: 1536px) and (min-width: 1224px) {
  .card-side-img img {
    max-width: 120%;
  }
}
@media (max-width: 1024px) {
  .card-horizontal {
    flex-direction: column;
    align-items: flex-start;
  }
}

@media (max-width: 768px) {
  .grid-cards {
    grid-template-columns: 1fr;
  }

  .card-heading {
    font-size: 20px;
  }
}

/* ========== FEEDBACK SECTION ========== */

.feedback-section {
  background-color: #fff;
  /* padding-top: 0; */
}

.feedback-container {
  display: flex;
  align-items: stretch; /* Stretch to match heights */
  justify-content: center;
  gap: 20px;
  /* max-width: 1100px; */
  margin: 0 auto;
}
/* ... */

